Modinvup 128 imports style check (#158)
* MODINVUP-128-imports style check

* MODINVUP-128-imports sq